# burnt-umber

./: .eslintrc.cjs  .gitignore  README.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
rust/: Cargo.toml
rust/src/: camera.rs  color.frag  color.rs  color.vert  element.rs  embed.rs  geometry.rs  hsv.frag  input.rs  lib.rs  mandelbrot.frag  mesh.rs  pos.frag  pre_embed.rs  renders.rs  scene.rs
rust/src/color/: cie.rs  web.rs
rust/src/element/: coloraxis.rs  colorchips.rs  colorspace.rs  embedswitcher.rs
rust/src/mesh/: geometry.rs  polyline.rs
src/: app.css
src/lib/: classes.ts  color.ts  math.ts  mesh.ts  stores.ts
src/lib/assets/: CopyIcon.svelte  chevron-down.svelte  chevron-right.svelte  x.svelte
src/lib/element/: axis.ts  controller.ts  cursor.ts  index.ts  space.ts
src/lib/geometry/: vec.ts
src/lib/motion/: spring.ts
src/lib/rust/: Cargo.toml
src/lib/rust/src/: lib.rs
src/lib/shaders/: embed.ts  frag.glsl  func.glsl  index.ts  vert.glsl
src/lib/shaders/rtt/: frag.glsl  frag_pass_1.glsl
src/routes/: +page.svelte  Big.svelte  Canvas.svelte  Center.svelte  CloseButton.svelte  ColorAxes.svelte  ColorAxis.svelte  ColorBunch.svelte  ColorChip.svelte  ColorGrid.svelte  ColorPicker.svelte  ColorTextInput.svelte  Colorpicker.svelte  CopyButton.svelte  Cursor.svelte  History.svelte  Palette.svelte  RTT.svelte  RustCanvas.svelte  RustColorpicker.svelte  TextPreview.svelte  TextPreviewGroup.svelte
src/routes/rtt/: +page.svelte  RTT.svelte
