[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[build]
target = "wasm32-unknown-unknown"

[dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3.64"
three-d = "0.16.0"
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.64", features = ["HtmlCanvasElement"]}
winit = "0.28.6"
